--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.magenic.jmaqs.archetypes</groupId>
     <artifactId>jmaqs-webservices-project</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${revision}</version>
 
     <properties>
+        <revision>2.1.0-SNAPSHOT</revision>
         <compiler.plugin.version>3.6.1</compiler.plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <testng.version>6.14.3</testng.version>
-        <jmaq.version>2.0.0</jmaq.version>
+        <jmaq.version>2.1.0</jmaq.version>
     </properties>
     
     <build>
@@ -21,9 +22,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${compiler.plugin.version}</version>
                 <configuration>
-                    <compilerVersion>1.8</compilerVersion>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>8</release>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
