--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Release Build
 
-on:
-  release:
-    types: [ published ]
+#on:
+#  release:
+#    types: [ published ]
 
 jobs:
   release_information:
